# MTN

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/v1/: __init__.py  customers.py  health.py  stock.py
app/core/: database.py  settings.py
app/models/: base.py  customer.py  stock.py
app/schemas/: customer.py  stock.py
app/services/: stock.py
